--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block page_title %}{% endblock %}</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   </head>
   <body>
     {% block content %}{% endblock %}
