Added connection information to the header + Logout option

--- a/views/files.html.twig
+++ b/views/files.html.twig
@@ -1,8 +1,12 @@
 {% extends 'layout.html.twig' %}
+{% use 'header.html.twig' %}    
 
 {% block page_title %}My files{% endblock %}
 
 {% block content %}
+
+{% if user['username'] is defined %}
+
 <table>
     {% for item in directory %}
         <tr>
@@ -15,4 +19,11 @@
         <td>{{ error }} </td>
     </tr>
 </table>
+
+{% else %}
+
+<div class="warning">Login to see your files</div>
+
+{% endif %}
+
 {% endblock %}
