--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   </head>
+  <header>
+    {% block header %}{% endblock %}
+  </header>
   <body>
     {% block content %}{% endblock %}
   </body>
