Can now read in different folders from a user

--- a/views/files.html.twig
+++ b/views/files.html.twig
@@ -15,9 +15,12 @@
             <td>{{item['modified_last']}}</td>
         </tr>
     {% endfor %}
+    {% if error != "" %}
     <tr>
+        <td><i class="fas fa-times"></i></td>
         <td>{{ error }} </td>
     </tr>
+    {% endif %}
 </table>
 
 {% else %}
