--- a/views/files.html.twig
+++ b/views/files.html.twig
@@ -11,8 +11,18 @@
     {% for item in directory %}
         <tr>
             <td><i class="fas fa-{{ item['type'] }}"></i></td>
-            <td>{{item['name']}}</td>
-            <td>{{item['modified_last']}}</td>
+            <td>
+            {% if item['type'] == 'folder' %}
+                {% if item['name'] == '..' %}
+                <a href="?action=files&amp;dir={{ lowerlevel }}">{{ item['name'] }}</a>
+                {% else %}
+                <a href="?action=files&amp;dir={{ currentdir }}/{{ item['name'] }}">{{ item['name'] }}</a>
+                {% endif %}
+            {% else %}
+            {{ item['name'] }}
+            {% endif %}
+            </td>
+            <td>{{ item['modified_last'] }}</td>
         </tr>
     {% endfor %}
     {% if error != "" %}
