--- a/views/files.html.twig
+++ b/views/files.html.twig
@@ -25,6 +25,7 @@
             <td>{{ item['modified_last'] }}</td>
             {% if item['type'] == 'file' %}
             <td><a href="?action=download&amp;file={{ currentdir }}/{{ item['name'] }}"><i class="fas fa-download"></i></a></td>
+            <td><a href="?action=delete&amp;dir={{ currentdir }}&amp;file={{ currentdir }}/{{ item['name'] }}"><i class="fas fa-trash"></i></a></td>
             {% else %}
             <td></td>
             {% endif %}
