--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -5,6 +5,7 @@
     <title>{% block page_title %}{% endblock %}</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <script src="assets/js/script.js"></script>
   </head>
   <header>
     {% block header %}{% endblock %}
