--- a/views/files.html.twig
+++ b/views/files.html.twig
@@ -13,6 +13,7 @@
         <td>Name</td>
         <td>Modified last</td>
         <td>Download</td>
+        <td>Edit</td>
         <td>Delete</td>
         <td>Move to</td>
     </tr>
@@ -42,22 +43,25 @@
 
             <td>{{ item['modified_last'] }}</td> {# Modified Last <td> #}
 
-            {# Download and remove <td> #}
+            {# Download, edit and remove <td> #}
             {% if item['type'] == 'file' %}
 
             <td><a href="?action=download&amp;file={{ currentdir }}/{{ item['name'] }}"><i class="fas fa-download"></i></a></td>
+            <td><div class="edit"><i class="fas fa-edit"></i></div></td>
             <td><a href="?action=delete&amp;dir={{ currentdir }}&amp;file={{ currentdir }}/{{ item['name'] }}"><i class="fas fa-trash"></i></a></td>
             
             {% else %}
 
             <td></td>
                 {% if item['name'] != '..' %} 
+                <td><div class="edit"><i class="fas fa-edit"></i></div></td>
                 <td><a href="?action=deleteDir&amp;dir={{ currentdir }}/{{ item['name'] }}"><i class="fas fa-trash"></i></a></td>
                 {% else %}
                 <td></td>
+                <td></td>
                 {% endif %}
             {% endif %}
-            {# End Download and remove <td> #}
+            {# End Download, edit and remove <td> #}
 
             {# move <td> #}
             {% if item['name'] != '..' %}
