New register css

--- a/views/header.html.twig
+++ b/views/header.html.twig
@@ -1,11 +1,13 @@
 {% block header %}
 
-{% if user['username'] is defined %}
-<div>Connected as {{ user['username'] }}</div>
-<div><a href="?action=logout">Logout</a></div>
-{% else %}
-<div><a href="?action=register">Register</a></div>
-<div><a href="?action=login">Log in</a></div>
-{% endif %}
+    {% if user['username'] is defined %}
+        <div>Connected as {{ user['username'] }}</div>
+        <div><a href="?action=logout">Logout</a></div>
+    {% else %}
+        <div class="header">
+            <div><a href="?action=register">Register</a></div>
+            <div><a href="?action=login">Log in</a></div>
+        </div>
+    {% endif %}
 
 {% endblock %}
