--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,37 @@
+@font-face {
+    font-family: "Muli";
+    src: url("Muli-Regular.ttf");
+}
+
 body {
     font-family: 'Muli';
 }
+.header {
+    background-color: #4d4dff;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+    margin: auto;
+    margin-bottom: 50px;
+    width: 600px;
+    height: 40px;
+    border: solid 1px;
+}
+
+a:hover {
+    color: white;
+}
 
 form[name="register"] {
+    background-color: #4d4dff;
     width: 600px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border: solid 1px;
+    margin: auto;
+    padding-top: 50px;
 }
 
 form[name="register"] label {
@@ -11,9 +39,23 @@ form[name="register"] label {
     display: inline-block;
     white-space: nowrap;
     width: 25%;
+    margin-left: 10%;
 }
+
 form[name="register"] input[type="text"], form[name="register"] input[type="password"] {
     width: 30%;
+    height: 20px;
+    box-shadow: -2px -2px 2px blue;
+    border-radius: 5px;
+}
+
+form[name="register"] input[type="submit"] {
+    width: 100px;
+    height: 30px;
+}
+
+form[name="register"] input[type="submit"]:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 span {
