--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ form[name="register"] input[type="text"], form[name="register"] input[type="pass
     width: 30%;
     height: 20px;
     border-radius: 5px;
+    border-style: solid;
 }
 
 form[name="register"] input[type="submit"] {
