--- a/views/files.html.twig
+++ b/views/files.html.twig
@@ -25,7 +25,7 @@
 
                 {% if item['name'] == '..' %}
 
-                <td><a href="?action=files&amp;dir={{ lowerlevel }}">{{ item['name'] }}</a></td>
+                <td class="name"><a href="?action=files&amp;dir={{ lowerlevel }}">{{ item['name'] }}</a></td>
                 
                 {% else %}
 
@@ -35,7 +35,7 @@
 
             {% else %}
 
-            <td class="name">{{ item['name'] }}</td>
+            <td class="name"><span>{{ item['name'] }}</span></td>
 
             {% endif %}
             {# End Name <td> #}
