--- a/views/files.html.twig
+++ b/views/files.html.twig
@@ -7,6 +7,8 @@
 
 {% if user['username'] is defined %}
 
+<div class="make-directory"><a href="?action=makeDir&amp;dir={{ currentdir }}">+ Folder</a></div>
+
 <table>
     <tr>
         <td></td>
