--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
     height: 40px;
     border: solid 1px;
 }
-a {
+header a {
     color: white;
 }
 
@@ -47,7 +47,7 @@ form[name="register"] input[type="text"], form[name="register"] input[type="pass
     width: 30%;
     height: 20px;
     border-radius: 5px;
-    border-style: solid;
+    border: solid 1px #DADADA;
 }
 
 form[name="register"] input[type="submit"] {
