--- a/views/header.html.twig
+++ b/views/header.html.twig
@@ -1,8 +1,12 @@
 {% block header %}
 
     {% if user['username'] is defined %}
-        <div>Connected as {{ user['username'] }}</div>
-        <div><a href="?action=logout">Logout</a></div>
+        <div class="header">
+            <div>Connected as {{ user['username'] }}</div>
+            <div><a href="?action=files">Files</a></div>
+            <div><a href="?action=upload">Upload</a></div>
+            <div><a href="?action=logout">Logout</a></div>
+        </div>
     {% else %}
         <div class="header">
             <div><a href="?action=register">Register</a></div>
