--- a/views/files.html.twig
+++ b/views/files.html.twig
@@ -78,7 +78,7 @@
                         {% endfor %}
                     </select>
                     <a href="" class="validate-move"><i class="fas fa-check"></i></a>
-                    <a href="" class="cancel-move"><i class="fas fa-times"></i></a>
+                    <span class="cancel-move"><i class="fas fa-times"></i></span>
                 </div>
             </td>
             {% else %}
