Added style to table

--- a/views/files.html.twig
+++ b/views/files.html.twig
@@ -27,7 +27,7 @@
 
                 {% if item['name'] == '..' %}
 
-                <td class="name"><a href="?action=files&amp;dir={{ lowerlevel }}">{{ item['name'] }}</a></td>
+                <td class="name"><a href="?action=files&amp;dir={{ lowerlevel }}"> {{ item['name'] }} <i class="fas fa-level-up-alt"></i></a></td>
                 
                 {% else %}
 
