--- a/views/files.html.twig
+++ b/views/files.html.twig
@@ -20,15 +20,14 @@
         <td>Move to</td>
     </tr>
     {% for item in directory %}
+    {% if item['name'] != '..' or (currentdir != '/' and currentdir != '') %}
         <tr>
             <td><i class="fas fa-{{ item['type'] }}"></i></td> {# Icon type <td> #}
             {# Name <td> #}
             {% if item['type'] == 'folder' %}
 
                 {% if item['name'] == '..' %}
-
                 <td class="name"><a href="?action=files&amp;dir={{ lowerlevel }}"> {{ item['name'] }} <i class="fas fa-level-up-alt"></i></a></td>
-                
                 {% else %}
 
                 <td class="name"><a href="?action=files&amp;dir={{ currentdir }}/{{ item['name'] }}">{{ item['name'] }}</a></td>                
@@ -86,6 +85,7 @@
             {% endif %}
             {# End move <td> #}
         </tr>
+    {% endif %}                
     {% endfor %}
     {% if error != "" %}
     <tr>
