--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,6 @@ td {
     padding: 5px 20px;
 }
 
-td:nth-child(1), td:nth-child(4), td:nth-child(5), td:nth-child(6), td:nth-child(7) {
+td:nth-child(1), td:nth-child(4), td:nth-child(5), td:nth-child(6), td:nth-child(7), td:nth-child(8) {
     text-align: center;
 }
