--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
     margin: auto;
     margin-bottom: 50px;
     width: 600px;
-    height: 40px;
+    height: 8vh;
     border: solid 1px;
 }
 a {
@@ -127,4 +127,17 @@ td {
 
 td:nth-child(1), td:nth-child(4), td:nth-child(5), td:nth-child(6), td:nth-child(7), td:nth-child(8) {
     text-align: center;
+}
+
+.file-display {
+    display: flex;
+    width: 100vw;
+    height: 80vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.file-display > * {
+    max-width: 100%;
+    max-height: 100%;
 }
