--- a/views/files.html.twig
+++ b/views/files.html.twig
@@ -86,7 +86,7 @@
             {% endif %}
             {# End move <td> #}
             {# View file <td> #}
-            {% if item['extension'] in ['jpg', 'png', 'jpeg', 'JPG'] %}
+            {% if item['extension'] in ['jpg', 'JPG', 'png', 'gif', 'jpeg', 'JPEG', 'txt', 'mp4', 'avi', 'mp3', 'wav'] %}
             <td><a href="?action=view&amp;file={{ currentdir }}/{{ item['name'] }}&amp;type={{ item['extension'] }}"><i class="fas fa-eye"></i></a></td>
             {% else %}
             <td></td>
