Advanced header & user path

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -1,10 +1,9 @@
 {% extends 'layout.html.twig' %}
+{% use 'header.html.twig' %}
 
-{% block page_title %}Cool Framework{% endblock %}
+{% block page_title %}Final Filer{% endblock %}
 
 {% block content %}
-<h1>
-  Welcome to the Cool Framework<br>
-  <small>By SUP'Internet DEV 2020</small>
-</h1>
+<h1>Final Filer</h1>
+<p>Register or log in to manage your files online !</p>
 {% endblock %}
