--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,9 @@
 
 body {
     font-family: 'Muli';
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .header {
     background-color: #82ccdd;
