--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,7 +128,7 @@ td {
     padding: 5px 20px;
 }
 
-td:nth-child(1), td:nth-child(4), td:nth-child(5), td:nth-child(6), td:nth-child(7), td:nth-child(8) {
+td:nth-child(1), td:nth-child(4), td:nth-child(5), td:nth-child(6), td:nth-child(7), td:nth-child(8), td:nth-child(9) {
     text-align: center;
 }
 
@@ -143,4 +143,17 @@ td:nth-child(1), td:nth-child(4), td:nth-child(5), td:nth-child(6), td:nth-child
 .file-display > * {
     max-width: 100%;
     max-height: 100%;
+}
+
+form[name="editingFile"] {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 70%;
+    width: 60%
+}
+
+textarea {
+    height: 80%;
+    width: 90%;
 }
