--- a/views/files.html.twig
+++ b/views/files.html.twig
@@ -15,7 +15,7 @@
         <td>Name</td>
         <td>Modified last</td>
         <td>Download</td>
-        <td>Edit</td>
+        <td>Rename</td>
         <td>Delete</td>
         <td>Move to</td>
         <td>View file</td>
